@startuml
title Prop Simple Factory Pattern

interface IProp {
    + forward(): void
    + activate(HeroAircraft hero): void
    + notValid(): boolean
    + vanish(): void
    + getLocationX(): int
    + getLocationY(): int
}

abstract class BaseProp {
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + {abstract} activate(HeroAircraft hero): void
    + notValid(): boolean
    + vanish(): void
    + getLocationX(): int
    + getLocationY(): int
}

class BloodProp {
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + activate(HeroAircraft hero): void
}

class BulletProp {
    + BulletProp(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + activate(HeroAircraft hero): void
}

class BulletPlusProp {
    + BulletPlusProp(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + activate(HeroAircraft hero): void
}

class FreezeProp {
    + FreezeProp(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + activate(HeroAircraft hero): void
}

class BombProp {
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + activate(HeroAircraft hero): void
}

class PropFactory {
    + {static} createProp(String type, int x, int y): IProp
}

IProp <|.. BaseProp
BaseProp <|-- BloodProp
BaseProp <|-- BulletProp
BaseProp <|-- BulletPlusProp
BaseProp <|-- FreezeProp
BaseProp <|-- BombProp

PropFactory ..> IProp

@enduml
